# QP_solver_benchmark

./: .gitignore  CMakeLists.txt  Mpc_planner.cpp  Mpc_planner.h  Mpc_planner_OSQPEigen.cpp  Mpc_planner_OSQPEigen.h  Mpc_planner_qpOASES.cpp  Mpc_planner_qpOASES.h  README.md  Timer.h  common_data.h  eigen_types.h  main.cpp  main_test_osqpeigen.cpp  readme.md
